# bella-keys-personal-assist

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  bella-services.yaml  docker-compose.electron.yaml  docker-compose.ems.yaml  docker-compose.yaml  launch_app.bat  package-lock.json
expense-manager-service/: .coveragerc  .env.sample  README.md  pyproject.toml  ruff.toml
expense-manager-service/app/: __init__.py  main.py
expense-manager-service/app/entities/errors/: accounts.py  base.py
expense-manager-service/app/entities/models/: accounts.py
expense-manager-service/app/entities/repositories/: spending_account.py
expense-manager-service/app/infrastructures/postgres_db/: database.py  spending_account.py
expense-manager-service/app/infrastructures/sqlite_db/: accounts.py  database.py  spending_account.py
expense-manager-service/app/routers/v1/: services.py
expense-manager-service/app/routers/v1/mappers/: spending_account.py
expense-manager-service/app/settings/: __init__.py  base.py  config.py
expense-manager-service/app/use_cases/: spending_account.py
expense-manager-service/app/use_cases/dto/: accounts.py  base.py  spending_account.py
expense-manager-service/app/use_cases/errors/: accounts.py  spending_account.py
expense-manager-service/app/use_cases/mappers/: accounts.py
expense-manager-service/app/use_cases/models/: base.py
expense-manager-service/docs/: architecture.md
expense-manager-service/tests/: conftest.py
expense-manager-service/tests/unit/: conftest.py  settings.py
expense-manager-service/tests/unit/use_cases/: test_accounts.py  test_spending_account.py
mcps/ems-mcp-server/: .env.sample  Dockerfile  README.md  entrypoint.sh  pyproject.toml
mcps/ems-mcp-server/app/: __init__.py  client.py  main.py  settings.py
mcps/ems-mcp-server/app/tools/: __init__.py  accounts.py  periods.py  spending_entries.py
services/bella-chat-service/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  ruff.toml
services/bella-chat-service/app/: __init__.py  main.py
services/bella-chat-service/app/agents/: __init__.py  base_agent.py  prompts.py
services/bella-chat-service/app/agents/orchestrator_agent/: __init__.py  agent.py  models.py  prompts.py
services/bella-chat-service/app/agents/rag_agent/: __init__.py  agent.py  models.py  prompts.py
services/bella-chat-service/app/agents/simple_chat_agent/: __init__.py  agent.py  models.py  prompts.py
services/bella-chat-service/app/core/: __init__.py  context.py
services/bella-chat-service/app/core/embeddings/: __init__.py  factory.py
services/bella-chat-service/app/core/llms/: __init__.py  factory.py  messages.py
services/bella-chat-service/app/core/vector_store/: __init__.py  qdrant.py
services/bella-chat-service/app/dependencies/: __init__.py  agents.py  ai_dependencies.py
services/bella-chat-service/app/routers/: __init__.py
services/bella-chat-service/app/routers/v1/: __init__.py  chat.py  models.py  prompts.py
services/bella-chat-service/app/settings/: base.py  config.py  dev.py
services/bella-chat-service/docs/development/: arize_setup.md  gpu_setup_local_models.md
services/bella-chat-service/experiments/langgraph_tutorials/: langgraph-workflow-with-tools.ipynb  simple-langgraph-workflow.ipynb
services/bella-chat-service/py_dependencies/: utilities-0.1.0-py3-none-any.whl  utilities-1.0.0-py3-none-any.whl
services/bella-chat-service/scripts/: README.md  setup-postgres-checkpoints.py
services/etl-pipelines/: .env.sample  README.md  docker-compose.yaml  pyproject.toml
services/etl-pipelines/etl_pipelines/: __init__.py  settings.py
services/etl-pipelines/etl_pipelines/github/: loader.py
services/etl-pipelines/etl_pipelines/github/etls/: evaluation_set.md  load_keys_personal_wiki.py
services/etl-pipelines/py_dependencies/: utilities-0.1.0-py3-none-any.whl
services/expense-manager-service/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
services/expense-manager-service/app/: __init__.py  main.py
services/expense-manager-service/app/entities/errors/: accounts.py  period.py  spending_entry.py
services/expense-manager-service/app/entities/models/: accounts.py  asset.py  liability.py  monthly_planner.py  period.py  savings_bucket.py  sort.py  spending_account.py  spending_entry.py
services/expense-manager-service/app/entities/repositories/: account.py  accounts.py  asset.py  liability.py  monthly_planner.py  period.py  savings_bucket.py  spending_account.py  spending_entry.py
services/expense-manager-service/app/infrastructures/inmemory_db/: README.md  accounts.py  spending_account.py
services/expense-manager-service/app/infrastructures/postgres_db/: account.py  accounts.py  asset.py  database.py  liability.py  monthly_planner.py  period.py  savings_bucket.py  spending_account.py  spending_entry.py
services/expense-manager-service/app/infrastructures/sqlite_db/: README.md  accounts.py  database.py  (+2 more)
services/expense-manager-service/app/routers/: __init__.py
services/expense-manager-service/app/settings/: base.py  dev.py
services/expense-manager-service/app/use_cases/: account.py  accounts.py  asset.py  liability.py  monthly_planner.py  period.py  price_resolver.py  savings_bucket.py  spending_account.py  spending_entry.py  wealth.py
services/expense-manager-service/docs/developer/: alembic_setup.md
services/expense-manager-service/docs/features/: README.md  accounting-periods.md  monthly-planner.md  savings-bucket.md  spending-ledger.md
services/expense-manager-service/py_dependencies/: utilities-1.0.0-py3-none-any.whl
services/expense-manager-service/scripts/db/: setup.sql
services/expense-manager-service/tests/integration/: conftest.py
services/expense-manager-service/tests/unit/: conftest.py  settings.py
services/utilities/: README.md  pyproject.toml
services/utilities/utilities/: __init__.py  auth_middleware.py  logger.py  time_profile.py
(+348 files in other folders)
