[project]
name = "ems-mcp-server"
dynamic = ["version"]
description = "EMS MCP Server - Exposes Expense Manager Service read operations as MCP tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "fastmcp>=3.2.0",
 "httpx>=0.28.1",
 "pydantic-settings>=2.13.1",
]

[project.scripts]
ems-mcp-server = "app.main:run"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app/"]
