[project]
name = "bella-chat-service"
dynamic = ["version"]
description = "Bella: Keys' Personal Assistant Chat Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-ollama>=0.3.10",
    "langgraph-checkpoint-postgres>=2.0.0",
    "mcp>=1.0.0",
    "openinference-instrumentation-langchain>=0.1.57",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "utilities",
    "uvicorn>=0.37.0",
    "langchain-google-genai>=4.2.4",
    "langchain>=1.3.2",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "fastapi>=0.136.3",
]

[project.optional-dependencies]
local-llm = [
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
lint = ["ruff>=0.13.3"]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "tox>=4.30.3",
]
type = ["mypy>=1.18.2"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
utilities = { path = "py_dependencies/utilities-0.1.0-py3-none-any.whl" }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app/"]
